--- a/CalculadoraP2.html
+++ b/CalculadoraP2.html
@@ -149,6 +149,46 @@ function multiplicar(){
     document.getElementById("resultado").value = resultado;
 
 }
+function dividir(){
+    
+    //capturar los valores de los inputs y guardamos en variables
+    var a = document.getElementById("a").value ;
+    var b = document.getElementById("b").value ;
+    var c = document.getElementById("c").value ;
+
+    //definimos la variable de de salida
+    var resulado;
+
+
+    console.log( a )
+    console.log( b )
+    console.log( c )
+
+    //verificar si las casillas de las variables estan en blanco
+    if(a == "" ){
+        a = 0;
+    }else{
+        a = parseInt( a );
+    }
+
+    if(b == "" ){
+        b = 0;
+    }else{
+        b = parseInt( b );
+    }
+    if(c == "" ){
+        c = 0;
+    }else{
+        c = parseInt( c );
+    }
+    
+    //realizamos la divición
+    resultado = a / b / c;
+
+    //mostramos el resultado
+    document.getElementById("resultado").value = resultado;
+
+}
         </script>
 </body>
 </html>
